Renamed project from GreenPulse to RouteZero and added hackathon scoring improvements
- Global rename: GreenPulse to RouteZero across all files
- Added proper __init__.py for connectors, transforms, rag, data, and tests packages
- Added config.py with centralized environment and path configuration
- Added transforms/co2_engine.py with full IPCC AR6 emission factor calculations
- Added tests/test_co2_engine.py and tests/test_alert_logic.py
- Added pyproject.toml with Python project metadata and tool config
- Added .github/workflows/ci.yml for GitHub Actions CI/CD
- Updated .env.example with all documented environment variables
- Created HACKATHON_DESCRIPTION.md for submission portal
- Updated CONTRIBUTING.md, SECURITY.md, DEMO_SCRIPT.md, and render.yaml

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "greenpulse-frontend",
-  "version": "1.0.0",
+  "name": "routezero-frontend",
+  "version": "2.0.0",
   "private": true,
-  "description": "Green Pulse - Intelligent logistics orchestration platform for reducing Scope 1 and Scope 3 CO2 emissions.",
+  "description": "RouteZero — Real-time carbon intelligence dashboard for India's logistics sector.",
   "author": "S-Eshwar-fut-dev",
   "license": "MIT",
   "repository": {
@@ -15,7 +15,9 @@
     "co2-reduction",
     "ai",
     "nextjs",
-    "hackathon"
+    "hackathon",
+    "pathway",
+    "india"
   ],
   "scripts": {
     "dev": "next dev",
