--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,9 +46,12 @@ Repository = "https://github.com/S-Eshwar-fut-dev/routezero"
 "Bug Tracker" = "https://github.com/S-Eshwar-fut-dev/routezero/issues"
 
 [tool.ruff]
-line-length = 100
+line-length = 120
 target-version = "py311"
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
+ignore = ["E501"]
 
 [tool.mypy]
 python_version = "3.11"
