fixed map components to use leaflet without mapbox token, implemented real-time tracking, added booking form with freight calculator, fixed API paths for bookings, added printable invoice download, removed offline badge from header

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ TELEMETRY_INTERVAL_SEC=2.0
 # ── Frontend ──────────────────────────────────────────────────────────────────
 # Override FastAPI endpoint for remote deployments
 # NEXT_PUBLIC_API_URL=http://localhost:8000
+
+# ── Mapbox ────────────────────────────────────────────────────────────────────
+# Required for real-time map (free at mapbox.com, 50k loads/month)
+NEXT_PUBLIC_MAPBOX_TOKEN=pk.your_mapbox_public_token_here
